<resources>
    <string name="app_name">Salt Vault</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="shortcutShortLabelBill">Add new bill</string>
    <string name="shortcutLongLabelBill">Add a new bill to the list</string>
    <string name="shortcutDisabledMessageBill">Cannot add new bill right now</string>

    <string name="shortcutShortLabelShopping">Add new shopping item</string>
    <string name="shortcutLongLabelShopping">Add a new shopping item to the list</string>
    <string name="shortcutDisabledMessageShopping">Cannot add new shopping item right now</string>

    <string name="shortcutShortLabelTodo">Add new task</string>
    <string name="shortcutLongLabelTodo">Add a new task to the list</string>
    <string name="shortcutDisabledMessageTodo">Cannot add new task right now</string>

    <string name="notification_shopping_channel_id">Salt Vault Shopping</string>
    <string name="notification_todo_channel_id">Salt Vault Tasks</string>

    <string name="shopping_notification_channel_name">Shopping Item Reminder</string>
    <string name="todo_notification_channel_name">Todo Reminder</string>

    <string name="shopping_notification_channel_desc">Notifications to remind you about pending shopping items</string>
    <string name="todo_notification_channel_desc">Notifications to remind you about pending tasks</string>
    
    <string name="signin_welcome_text">Welcome to Salt Vault. To begin, please sign in with the button below</string>

    <string name="backend_id">275819077838-um75nrsq0i7d9adv8hble3bsc8ffjtf7.apps.googleusercontent.com</string>
    <string name="backend_id_dave">721536060068-ttp53hprd7qhsjm25fmpl94toht291nm.apps.googleusercontent.com</string>
</resources>
